--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="scene">
             <div class="video">
                 <iframe src="https://drive.google.com/file/d/1AHF1soGYCXVjsTDBzsJW5PykXXn0rP3k/preview"
-                        width="80%"
-                        height="auto">
+                        width="70%"
+                        height="50%">
                 </iframe>
             </div>
             <img src="img/pod-1.webp" alt="" class="pod-1">
